update with css

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
             Never gonna give you up.
         </title>
         <!-- put stuff in here that you don't want users to see -->
+        <link href="style.css" type="text/css" rel="stylesheet"/>
     </head>
     <body>
         <!-- body is where I put the content that I want to show up in the browser window. -->
@@ -19,6 +20,7 @@
 
         <nav>
             <ul>
+                
                 <!-- This will be a banner going across the top with drop down menus -->
                 <li>Home</li><li>Inventory</li> <li>Services</li> <li>Photo Gallery</li><li>Contact Us</li>      
             </ul>
@@ -45,7 +47,6 @@
         </main>
 
     <footer>
-        <ul>
             <li>
                 Contact Us
             </li>
@@ -58,7 +59,6 @@
             <li>
                 Insert social media links here.
             </li>
-        </ul>
     </footer>
     </body>
 </html>
