--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <!-- Header will have logo next to it -->
             </h1>
             <!-- Picture will go below banner -->
-            <img src="" alt="Picture with description of car for sale goes here">
+            <img class="logo" src="" alt="Picture with description of car for sale goes here">
         </header>
 
         <nav>
@@ -47,6 +47,7 @@
         </main>
 
     <footer>
+        <ul>
             <li>
                 Contact Us
             </li>
@@ -59,6 +60,7 @@
             <li>
                 Insert social media links here.
             </li>
+        </ul>
     </footer>
     </body>
 </html>
