--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     Touge Imports USA was started by two friends with an extreme obsession for all things JDM. They met while serving in the military in Japan and after returning stateside they decided to help people find their dream cars just as they found theirs during their tour in Japan.
                 </p>
             <article>
-
+                <script src="javatest.js"></script>
             </article>
         </main>
 
